--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    <script></script>
+    
 </head>
 
 <body>
@@ -25,6 +25,7 @@
         </nav>
     </header>
     <main>
+        <div class="greeting"></div>
         <section id="init">
             <div class="section-caja1">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe amet animi ducimus nulla neque
